packages/isar/test/errors/index/contains_int_id.dart
// ids cannot be indexed

import 'package:isar/isar.dart';

@collection
class Model {
  late int id;

  @Index(composite: ['id'])
  int? str;
}
